feat: Put navigation items

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,22 @@
     <body class="body">
         <!-- nav -->
         <nav class="nav">
-
+            <ul class="nav__list">
+            <li class="nav__item">
+                <a class="nav__link" href="#about">About</a>
+            </li>
+            <li class="nav__item">
+                <a class="nav__link" href="#features">Features</a>
+            </li>
+            <li class="nav__item">
+                <a class="nav__link" href="#packages">Packages</a>
+            </li>
+            <li class="nav__item">
+                <a class="nav__link" href="#stories">Stories</a>
+            </li>
+            <li class="nav__item">
+                <a class="nav__link" href="#booking">Booking</a>
+            </li>
         </nav>
         <!-- header -->
         <header id="header" class="header">
