feat: Put header elements

--- a/src/index.html
+++ b/src/index.html
@@ -29,7 +29,9 @@
         </nav>
         <!-- header -->
         <header id="header" class="header">
-
+            <h1>Nature Advisor</h1>
+            <h3>Explore the world our ancestors have roamed for thousands of years</h3>
+            <a class="tour__link" href="#packages">Discover Our Tours</a>
         </header>
         <!-- main -->
         <main class="main">
