feat: Put about  elements

--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <!-- head -->
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width,initial-scale=1.0">
-        <title>Outdoor Advisor</title>
-    </head>
-    <!-- body -->
-    <body class="body">
-        <!-- nav -->
-        <nav class="nav">
-            <ul class="nav__list">
+
+<!-- head -->
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
+    <title>Outdoor Advisor</title>
+</head>
+
+<!-- body -->
+<body class="body">
+    <!-- nav -->
+    <nav class="nav">
+        <ul class="nav__list">
             <li class="nav__item">
                 <a class="nav__link" href="#about">About</a>
             </li>
@@ -26,39 +28,72 @@
             <li class="nav__item">
                 <a class="nav__link" href="#booking">Booking</a>
             </li>
-        </nav>
-        <!-- header -->
-        <header id="header" class="header">
-            <h1>Nature Advisor</h1>
-            <h3>Explore the world our ancestors have roamed for thousands of years</h3>
-            <a class="tour__link" href="#packages">Discover Our Tours</a>
-        </header>
-        <!-- main -->
-        <main class="main">
-            <section id="about" class="about">
+    </nav>
+    <!-- header -->
+    <header id="header" class="header">
+        <h1 class="heading heading--1 heading--main">Nature Advisor</h1>
+        <h3 class="heading heading--3">Explore the world our ancestors have roamed for thousands of years</h3>
+        <a class="button button--link" href="#packages">Discover Our Tours</a>
+    </header>
+    <!-- main -->
+    <main class="main">
+        <!-- about section-->
+        <section id="about" class="about">
+            <div class="about__info">
+            <h3 class="heading heading--3">Tours for living on the wild side</h3>
+            <h5 class="heading heading--5">See nature the way our ancestors once saw it</h5>
+            <p class="paragprah">fringilla eu lacinia sit amet, aliquet quis sapien. Proin pellentesque, metus ut euismod pellentesque,
+                ipsum ipsum malesuada elit, eget euismod ante sapien nec nunc.
+                Quisque vitae urna sed dolor placerat venenatis ac a odio. Nunc dolor urna, eleifend ut vestibulum sit
+                amet, rutrum vel ante.
+                Vestibulum neque libero, euismod nec augue sed, aliquam egestas mi. Fusce eu justo nec sapien tincidunt
+                hendrerit eu sed diam.
+                Praesent eget ex ac nunc tristique fringilla vitae at purus. Morbi pretium ultricies neque quis
+                vestibulum.
+            </p>
+            <p class="paragraph">
+                Fusce dictum aliquet nulla eget tristique. Donec sodales nisi finibus, tincidunt sapien in, commodo
+                erat. Nulla sit amet quam a ante ultricies mattis convallis quis quam. Duis nunc libero, varius quis
+                venenatis a, posuere egestas tortor. Sed pellentesque consectetur turpis. In aliquet turpis in lacus
+                sollicitudin, non scelerisque urna laoreet. Nam aliquam lectus nec quam blandit, vitae egestas odio
+                pretium. Pellentesque commodo finibus ex, nec efficitur tellus condimentum ut. Integer vulputate
+                elementum metus et auctor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
+                cubilia curae; Aenean ac ligula neque. Cras ut aliquam risus.
+            </p>
+            <a class="button button--link" href="#">
+                Learn More
+                <svg class="button__icon">
+                    <use href="./assets/sprite/fa-regular.svg#arrow-right"></use>
+                </svg>
+            </a>
+            </div>
+            <div class="about__photos">
+                <img class="about__photo about__photo--1" src="./assets/img/forest-1.jpg">
+                <img class="about__photo about__photo--2" src="./assets/img/forest-2.jpg">
+                <img class="about__photo about__photo--3" src="./assets/img/forest-3.jpg">
+            </div>
+        </section>
 
-            </section>
+        <section id="features" class="features">
 
-            <section id="features" class="features">
+        </section>
 
-            </section>
+        <section id="packages" class="packages">
 
-            <section id="packages" class="packages">
-                
-            </section>
+        </section>
 
-            <section id="stories" class="stories">
+        <section id="stories" class="stories">
 
-            </section>
+        </section>
 
-            <section id="booking" class="booking">
+        <section id="booking" class="booking">
 
-            </section>
-        </main>
-        <!-- footer -->
-        <footer class="footer">
+        </section>
+    </main>
+    <!-- footer -->
+    <footer class="footer">
 
-        </footer>
-    </body>
+    </footer>
+</body>
 
 </html>
