feat: Put feature elements

--- a/src/index.html
+++ b/src/index.html
@@ -73,13 +73,63 @@
                 <img class="about__photo about__photo--3" src="./assets/img/forest-3.jpg">
             </div>
         </section>
-
+        <!-- features -->
         <section id="features" class="features">
-
+            <article class="feature">
+                <svg class="feature__icon">
+                    <use href="./assets/sprite/fa-regular.svg#globe-americas"></use>
+                </svg>
+                <h5 class="heading heading--5">Explore the world/h5>
+                <p class="feature__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a felis semper, laoreet dui eleifend, malesuada lectus.
+                     Praesent egestas nisi vel arcu condimentum lobortis. Sed sed posuere odio. Praesent volutpat vestibulum neque a lacinia. 
+                     Maecenas interdum libero imperdiet magna tempus placerat. Nam egestas ac tellus eget gravida. 
+                    Donec sed sapien tristique, fermentum est a, tincidunt neque. Aenean quis mauris tincidunt, condimentum sem ac, feugiat felis. 
+                </p>
+            </article>
+            <article class="feature">
+                <svg class="feature__icon">
+                    <use href="./assets/sprite/fa-regular.svg#paw-claws"></use>
+                </svg>
+                <h5 class="heading heading--5">See the animals up close</h5>
+                <p class="feature__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a felis semper, laoreet dui eleifend, malesuada lectus.
+                     Praesent egestas nisi vel arcu condimentum lobortis. Sed sed posuere odio. Praesent volutpat vestibulum neque a lacinia. 
+                     Maecenas interdum libero imperdiet magna tempus placerat. Nam egestas ac tellus eget gravida. 
+                    Donec sed sapien tristique, fermentum est a, tincidunt neque. Aenean quis mauris tincidunt, condimentum sem ac, feugiat felis. 
+                </p>
+            </article>
+            <article class="feature">
+                <svg class="feature__icon">
+                    <use href="./assets/sprite/fa-regular.svg#seedling"></use>
+                </svg>
+                <h5 class="heading heading--5">Eat how our ancestors did</h5>
+                <p class="feature__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a felis semper, laoreet dui eleifend, malesuada lectus.
+                     Praesent egestas nisi vel arcu condimentum lobortis. Sed sed posuere odio. Praesent volutpat vestibulum neque a lacinia. 
+                     Maecenas interdum libero imperdiet magna tempus placerat. Nam egestas ac tellus eget gravida. 
+                    Donec sed sapien tristique, fermentum est a, tincidunt neque. Aenean quis mauris tincidunt, condimentum sem ac, feugiat felis. 
+                </p>
+            </article>
+            <article class="feature">
+                <svg class="feature__icon">
+                    <use href="./assets/sprite/fa-regular.svg#water"></use>
+                </svg>
+                <h5 class="heading heading--5">Bathe in the worlds cleanest rivers and natural baths</h5>
+                <p class="feature__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a felis semper, laoreet dui eleifend, malesuada lectus.
+                     Praesent egestas nisi vel arcu condimentum lobortis. Sed sed posuere odio. Praesent volutpat vestibulum neque a lacinia. 
+                     Maecenas interdum libero imperdiet magna tempus placerat. Nam egestas ac tellus eget gravida. 
+                    Donec sed sapien tristique, fermentum est a, tincidunt neque. Aenean quis mauris tincidunt, condimentum sem ac, feugiat felis. 
+                </p>
+            </article>
         </section>
-
+        <!-- packages -->
         <section id="packages" class="packages">
-
+                <article class="package">
+                    <img src="./assets/img//forest-1.jpg">
+                    <h3 class="heading heading--3"></h3>
+                </article>
         </section>
 
         <section id="stories" class="stories">
