feat: Put package elements

--- a/src/index.html
+++ b/src/index.html
@@ -75,6 +75,7 @@
         </section>
         <!-- features -->
         <section id="features" class="features">
+            <h3 class="heading heading--3">Features</h3>
             <article class="feature">
                 <svg class="feature__icon">
                     <use href="./assets/sprite/fa-regular.svg#globe-americas"></use>
@@ -126,9 +127,33 @@
         </section>
         <!-- packages -->
         <section id="packages" class="packages">
+            <h3 class="heading heading--3">Popular packages</h3>
                 <article class="package">
-                    <img src="./assets/img//forest-1.jpg">
-                    <h3 class="heading heading--3"></h3>
+                    <img src="./assets/img//forest-1.jpg" class="package__img">
+                    <h5 class="heading heading--5"></h5>
+                    <ul class="package__list">
+                        <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                        <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                        <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                    </ul>
+                </article>
+                <article class="package">
+                    <img src="./assets/img//forest-2.jpg" class="package__img">
+                    <h5 class="heading heading--5"></h5>
+                    <ul class="package__list">
+                        <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                        <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                        <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                    </ul>
+                </article>
+                <article class="package">
+                    <img src="./assets/img//forest-3.jpg" class="package__img">
+                    <h5 class="heading heading--5"></h5>
+                    <ul class="package__list">
+                        <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                        <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                        <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                    </ul>
                 </article>
         </section>
 
