--- a/src/index.html
+++ b/src/index.html
@@ -40,32 +40,35 @@
         <!-- about section-->
         <section id="about" class="about">
             <div class="about__info">
-            <h3 class="heading heading--3">Tours for living on the wild side</h3>
-            <h5 class="heading heading--5">See nature the way our ancestors once saw it</h5>
-            <p class="paragprah">fringilla eu lacinia sit amet, aliquet quis sapien. Proin pellentesque, metus ut euismod pellentesque,
-                ipsum ipsum malesuada elit, eget euismod ante sapien nec nunc.
-                Quisque vitae urna sed dolor placerat venenatis ac a odio. Nunc dolor urna, eleifend ut vestibulum sit
-                amet, rutrum vel ante.
-                Vestibulum neque libero, euismod nec augue sed, aliquam egestas mi. Fusce eu justo nec sapien tincidunt
-                hendrerit eu sed diam.
-                Praesent eget ex ac nunc tristique fringilla vitae at purus. Morbi pretium ultricies neque quis
-                vestibulum.
-            </p>
-            <p class="paragraph">
-                Fusce dictum aliquet nulla eget tristique. Donec sodales nisi finibus, tincidunt sapien in, commodo
-                erat. Nulla sit amet quam a ante ultricies mattis convallis quis quam. Duis nunc libero, varius quis
-                venenatis a, posuere egestas tortor. Sed pellentesque consectetur turpis. In aliquet turpis in lacus
-                sollicitudin, non scelerisque urna laoreet. Nam aliquam lectus nec quam blandit, vitae egestas odio
-                pretium. Pellentesque commodo finibus ex, nec efficitur tellus condimentum ut. Integer vulputate
-                elementum metus et auctor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
-                cubilia curae; Aenean ac ligula neque. Cras ut aliquam risus.
-            </p>
-            <a class="button button--link" href="#">
-                Learn More
-                <svg class="button__icon">
-                    <use href="./assets/sprite/fa-regular.svg#arrow-right"></use>
-                </svg>
-            </a>
+                <h3 class="heading heading--3">Tours for living on the wild side</h3>
+                <h5 class="heading heading--5">See nature the way our ancestors once saw it</h5>
+                <p class="paragprah">fringilla eu lacinia sit amet, aliquet quis sapien. Proin pellentesque, metus ut
+                    euismod pellentesque,
+                    ipsum ipsum malesuada elit, eget euismod ante sapien nec nunc.
+                    Quisque vitae urna sed dolor placerat venenatis ac a odio. Nunc dolor urna, eleifend ut vestibulum
+                    sit
+                    amet, rutrum vel ante.
+                    Vestibulum neque libero, euismod nec augue sed, aliquam egestas mi. Fusce eu justo nec sapien
+                    tincidunt
+                    hendrerit eu sed diam.
+                    Praesent eget ex ac nunc tristique fringilla vitae at purus. Morbi pretium ultricies neque quis
+                    vestibulum.
+                </p>
+                <p class="paragraph">
+                    Fusce dictum aliquet nulla eget tristique. Donec sodales nisi finibus, tincidunt sapien in, commodo
+                    erat. Nulla sit amet quam a ante ultricies mattis convallis quis quam. Duis nunc libero, varius quis
+                    venenatis a, posuere egestas tortor. Sed pellentesque consectetur turpis. In aliquet turpis in lacus
+                    sollicitudin, non scelerisque urna laoreet. Nam aliquam lectus nec quam blandit, vitae egestas odio
+                    pretium. Pellentesque commodo finibus ex, nec efficitur tellus condimentum ut. Integer vulputate
+                    elementum metus et auctor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
+                    cubilia curae; Aenean ac ligula neque. Cras ut aliquam risus.
+                </p>
+                <a class="button button--link" href="#">
+                    Learn More
+                    <svg class="button__icon">
+                        <use href="./assets/sprite/fa-regular.svg#arrow-right"></use>
+                    </svg>
+                </a>
             </div>
             <div class="about__photos">
                 <img class="about__photo about__photo--1" src="./assets/img/forest-1.jpg">
@@ -81,12 +84,15 @@
                     <use href="./assets/sprite/fa-regular.svg#globe-americas"></use>
                 </svg>
                 <h5 class="heading heading--5">Explore the world/h5>
-                <p class="feature__text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a felis semper, laoreet dui eleifend, malesuada lectus.
-                     Praesent egestas nisi vel arcu condimentum lobortis. Sed sed posuere odio. Praesent volutpat vestibulum neque a lacinia. 
-                     Maecenas interdum libero imperdiet magna tempus placerat. Nam egestas ac tellus eget gravida. 
-                    Donec sed sapien tristique, fermentum est a, tincidunt neque. Aenean quis mauris tincidunt, condimentum sem ac, feugiat felis. 
-                </p>
+                    <p class="feature__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a felis semper, laoreet dui
+                        eleifend, malesuada lectus.
+                        Praesent egestas nisi vel arcu condimentum lobortis. Sed sed posuere odio. Praesent volutpat
+                        vestibulum neque a lacinia.
+                        Maecenas interdum libero imperdiet magna tempus placerat. Nam egestas ac tellus eget gravida.
+                        Donec sed sapien tristique, fermentum est a, tincidunt neque. Aenean quis mauris tincidunt,
+                        condimentum sem ac, feugiat felis.
+                    </p>
             </article>
             <article class="feature">
                 <svg class="feature__icon">
@@ -94,10 +100,13 @@
                 </svg>
                 <h5 class="heading heading--5">See the animals up close</h5>
                 <p class="feature__text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a felis semper, laoreet dui eleifend, malesuada lectus.
-                     Praesent egestas nisi vel arcu condimentum lobortis. Sed sed posuere odio. Praesent volutpat vestibulum neque a lacinia. 
-                     Maecenas interdum libero imperdiet magna tempus placerat. Nam egestas ac tellus eget gravida. 
-                    Donec sed sapien tristique, fermentum est a, tincidunt neque. Aenean quis mauris tincidunt, condimentum sem ac, feugiat felis. 
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a felis semper, laoreet dui
+                    eleifend, malesuada lectus.
+                    Praesent egestas nisi vel arcu condimentum lobortis. Sed sed posuere odio. Praesent volutpat
+                    vestibulum neque a lacinia.
+                    Maecenas interdum libero imperdiet magna tempus placerat. Nam egestas ac tellus eget gravida.
+                    Donec sed sapien tristique, fermentum est a, tincidunt neque. Aenean quis mauris tincidunt,
+                    condimentum sem ac, feugiat felis.
                 </p>
             </article>
             <article class="feature">
@@ -106,10 +115,13 @@
                 </svg>
                 <h5 class="heading heading--5">Eat how our ancestors did</h5>
                 <p class="feature__text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a felis semper, laoreet dui eleifend, malesuada lectus.
-                     Praesent egestas nisi vel arcu condimentum lobortis. Sed sed posuere odio. Praesent volutpat vestibulum neque a lacinia. 
-                     Maecenas interdum libero imperdiet magna tempus placerat. Nam egestas ac tellus eget gravida. 
-                    Donec sed sapien tristique, fermentum est a, tincidunt neque. Aenean quis mauris tincidunt, condimentum sem ac, feugiat felis. 
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a felis semper, laoreet dui
+                    eleifend, malesuada lectus.
+                    Praesent egestas nisi vel arcu condimentum lobortis. Sed sed posuere odio. Praesent volutpat
+                    vestibulum neque a lacinia.
+                    Maecenas interdum libero imperdiet magna tempus placerat. Nam egestas ac tellus eget gravida.
+                    Donec sed sapien tristique, fermentum est a, tincidunt neque. Aenean quis mauris tincidunt,
+                    condimentum sem ac, feugiat felis.
                 </p>
             </article>
             <article class="feature">
@@ -118,47 +130,67 @@
                 </svg>
                 <h5 class="heading heading--5">Bathe in the worlds cleanest rivers and natural baths</h5>
                 <p class="feature__text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a felis semper, laoreet dui eleifend, malesuada lectus.
-                     Praesent egestas nisi vel arcu condimentum lobortis. Sed sed posuere odio. Praesent volutpat vestibulum neque a lacinia. 
-                     Maecenas interdum libero imperdiet magna tempus placerat. Nam egestas ac tellus eget gravida. 
-                    Donec sed sapien tristique, fermentum est a, tincidunt neque. Aenean quis mauris tincidunt, condimentum sem ac, feugiat felis. 
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a felis semper, laoreet dui
+                    eleifend, malesuada lectus.
+                    Praesent egestas nisi vel arcu condimentum lobortis. Sed sed posuere odio. Praesent volutpat
+                    vestibulum neque a lacinia.
+                    Maecenas interdum libero imperdiet magna tempus placerat. Nam egestas ac tellus eget gravida.
+                    Donec sed sapien tristique, fermentum est a, tincidunt neque. Aenean quis mauris tincidunt,
+                    condimentum sem ac, feugiat felis.
                 </p>
             </article>
         </section>
         <!-- packages -->
         <section id="packages" class="packages">
             <h3 class="heading heading--3">Popular packages</h3>
-                <article class="package">
-                    <img src="./assets/img//forest-1.jpg" class="package__img">
-                    <h5 class="heading heading--5"></h5>
-                    <ul class="package__list">
-                        <li class="package__item">Lorem ipsum dolor sit amet.</li>
-                        <li class="package__item">Lorem ipsum dolor sit amet.</li>
-                        <li class="package__item">Lorem ipsum dolor sit amet.</li>
-                    </ul>
-                </article>
-                <article class="package">
-                    <img src="./assets/img//forest-2.jpg" class="package__img">
-                    <h5 class="heading heading--5"></h5>
-                    <ul class="package__list">
-                        <li class="package__item">Lorem ipsum dolor sit amet.</li>
-                        <li class="package__item">Lorem ipsum dolor sit amet.</li>
-                        <li class="package__item">Lorem ipsum dolor sit amet.</li>
-                    </ul>
-                </article>
-                <article class="package">
-                    <img src="./assets/img//forest-3.jpg" class="package__img">
-                    <h5 class="heading heading--5"></h5>
-                    <ul class="package__list">
-                        <li class="package__item">Lorem ipsum dolor sit amet.</li>
-                        <li class="package__item">Lorem ipsum dolor sit amet.</li>
-                        <li class="package__item">Lorem ipsum dolor sit amet.</li>
-                    </ul>
-                </article>
+            <article class="package">
+                <img src="./assets/img//forest-1.jpg" class="package__img">
+                <h5 class="heading heading--5"></h5>
+                <ul class="package__list">
+                    <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                    <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                    <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                </ul>
+            </article>
+            <article class="package">
+                <img src="./assets/img//forest-2.jpg" class="package__img">
+                <h5 class="heading heading--5"></h5>
+                <ul class="package__list">
+                    <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                    <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                    <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                </ul>
+            </article>
+            <article class="package">
+                <img src="./assets/img//forest-3.jpg" class="package__img">
+                <h5 class="heading heading--5"></h5>
+                <ul class="package__list">
+                    <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                    <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                    <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                </ul>
+            </article>
         </section>
-
+        <!-- stories -->
         <section id="stories" class="stories">
-
+            <article class="story">
+                <p class="story__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lacinia, felis
+                    sed tempus aliquet, augue ligula lobortis ex, quis vulputate tortor nisl ut magna.
+                    Praesent molestie accumsan nisl, sit amet tincidunt eros tincidunt vel. Fusce nec mi sapien.</p>
+                <svg class="story__img">
+                    <use href="./assets/sprite/fa-regular.svg#user-circle"></use>
+                </svg>
+                <p class=story__author>Kevin Fremgen</p>
+            </article>
+            <article class="story">
+                <p class="story__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lacinia, felis
+                    sed tempus aliquet, augue ligula lobortis ex, quis vulputate tortor nisl ut magna.
+                    Praesent molestie accumsan nisl, sit amet tincidunt eros tincidunt vel. Fusce nec mi sapien.</p>
+                <svg class="story__img">
+                    <use href="./assets/sprite/fa-regular.svg#user-circle"></use>
+                </svg>
+                <p class=story__author>Andrew Jacobsin</p>
+            </article>
         </section>
 
         <section id="booking" class="booking">
