feat: Put booking elements

--- a/src/index.html
+++ b/src/index.html
@@ -192,9 +192,14 @@
                 <p class=story__author>Andrew Jacobsin</p>
             </article>
         </section>
-
+        <!-- booking -->
         <section id="booking" class="booking">
-
+            <form class="form">
+                <input class="form__input form__input--email" type="email"  required>
+                <input class="form__input form__input--text" type="text" required>
+                <input class="form__input form__input--date" type="date" required>
+                <button class="form__submit">Book Now!</button>
+            </form>
         </section>
     </main>
     <!-- footer -->
