--- a/src/index.html
+++ b/src/index.html
@@ -204,7 +204,7 @@
     </main>
     <!-- footer -->
     <footer class="footer">
-
+            <p class="copyright__text">&copy <span class="copyright__date"> 2021</span> <span class="copyright__company">FremTech Development LLC.</span></p>
     </footer>
 </body>
 
