feat: Put grid elements in place

--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,7 @@
     </header>
     <!-- main -->
     <main class="main">
-        <!-- about section-->
+        <!-- about section -->
         <section id="about" class="about">
             <div class="about__info">
                 <h3 class="heading heading--3">Tours for living on the wild side</h3>
@@ -176,7 +176,7 @@
                     <li class="package__item">Lorem ipsum dolor sit amet.</li>
                 </ul>
             </article>
-        </section>
+        </section> -->
         <!-- stories -->
         <section id="stories" class="stories">
             <article class="story">
@@ -197,20 +197,21 @@
                 </svg>
                 <p class=story__author>Andrew Jacobsin</p>
             </article>
-        </section>
+        </section> -->
         <!-- booking -->
         <section id="booking" class="booking">
             <form class="form">
-                <input class="form__input form__input--email" type="email"  required>
+                <input class="form__input form__input--email" type="email" required>
                 <input class="form__input form__input--text" type="text" required>
                 <input class="form__input form__input--date" type="date" required>
                 <button class="form__submit">Book Now!</button>
             </form>
-        </section>
+        </section> --> -->
     </main>
     <!-- footer -->
     <footer class="footer">
-            <p class="copyright__text">&copy <span class="copyright__date"> 2021</span> <span class="copyright__company">FremTech Development LLC.</span></p>
+        <p class="copyright__text">&copy <span class="copyright__date"> 2021</span> <span
+                class="copyright__company">FremTech Development LLC.</span></p>
     </footer>
 </body>
 
