feat: Put header styles

--- a/src/index.html
+++ b/src/index.html
@@ -38,8 +38,8 @@
     <!-- header -->
     <header id="header" class="header">
         <h1 class="heading heading--1 heading--main">Nature Advisor</h1>
-        <h3 class="heading heading--3">Explore the world our ancestors have roamed for thousands of years</h3>
-        <a class="button button--link" href="#packages">Discover Our Tours</a>
+        <h3 class="heading heading--3 heading--sub mb--large">Live life on the wild side</h3>
+        <a class="button button--animation button--light button--move-link" href="#packages">Discover Our Tours</a>
     </header>
     <!-- main -->
     <main class="main">
@@ -69,7 +69,7 @@
                     elementum metus et auctor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
                     cubilia curae; Aenean ac ligula neque. Cras ut aliquam risus.
                 </p>
-                <a class="button button--link" href="#">
+                <a class="button button--primary button--color-link" href="#">
                     Learn More
                     <svg class="button__icon">
                         <use href="./assets/sprite/fa-regular.svg#arrow-right"></use>
