feat: Put about section styles

--- a/src/index.html
+++ b/src/index.html
@@ -39,16 +39,15 @@
     <header id="header" class="header">
         <h1 class="heading heading--1 heading--main">Nature Advisor</h1>
         <h3 class="heading heading--3 heading--sub mb--large">Live life on the wild side</h3>
-        <a class="button button--animation button--light button--move-link" href="#packages">Discover Our Tours</a>
+        <a class="button button--animation button--white button--link" href="#packages">Discover Our Tours</a>
     </header>
     <!-- main -->
     <main class="main">
         <!-- about section -->
         <section id="about" class="about">
+            <h3 class="heading heading--3 heading--green mb--large text--center">Tours for living on the wild side</h3>
             <div class="about__info">
-                <h3 class="heading heading--3">Tours for living on the wild side</h3>
-                <h5 class="heading heading--5">See nature the way our ancestors once saw it</h5>
-                <p class="paragprah">fringilla eu lacinia sit amet, aliquet quis sapien. Proin pellentesque, metus ut
+                <p class="paragraph">fringilla eu lacinia sit amet, aliquet quis sapien. Proin pellentesque, metus ut
                     euismod pellentesque,
                     ipsum ipsum malesuada elit, eget euismod ante sapien nec nunc.
                     Quisque vitae urna sed dolor placerat venenatis ac a odio. Nunc dolor urna, eleifend ut vestibulum
@@ -69,7 +68,7 @@
                     elementum metus et auctor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
                     cubilia curae; Aenean ac ligula neque. Cras ut aliquam risus.
                 </p>
-                <a class="button button--primary button--color-link" href="#">
+                <a class="button button--green button--link" href="#">
                     Learn More
                     <svg class="button__icon">
                         <use href="./assets/sprite/fa-regular.svg#arrow-right"></use>
