feat: Put feature and package section styles

--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <title>Outdoor Advisor</title>
+    <title>Wild Tours</title>
     <!-- style sheets-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -37,7 +37,7 @@
     </nav>
     <!-- header -->
     <header id="header" class="header">
-        <h1 class="heading heading--1 heading--main">Nature Advisor</h1>
+        <h1 class="heading heading--1 heading--main">Wild Tours</h1>
         <h3 class="heading heading--3 heading--sub mb--large">Live life on the wild side</h3>
         <a class="button button--animation button--white button--link" href="#packages">Discover Our Tours</a>
     </header>
@@ -83,99 +83,97 @@
         </section>
         <!-- features -->
         <section id="features" class="features">
-            <h3 class="heading heading--3">Features</h3>
-            <article class="feature">
-                <svg class="feature__icon">
-                    <use href="./assets/sprite/fa-regular.svg#globe-americas"></use>
-                </svg>
-                <h5 class="heading heading--5">Explore the world/h5>
-                    <p class="feature__text">
+            <h3 class="heading heading--3 heading--white mb--large">Features</h3>
+            <div class="features__box">
+                <article class="feature">
+                    <svg class="feature__icon mb--small">
+                        <use href="./assets/sprite/fa-regular.svg#globe-americas"></use>
+                    </svg>
+                    <h5 class="heading heading--5 mb--medium">Explore the world</h5>
+                        <p class="paragraph">
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a felis semper, laoreet dui
+                            eleifend, malesuada lectus.
+                            Praesent egestas nisi vel arcu condimentum lobortis. Sed sed posuere odio. Praesent volutpat
+                            vestibulum neque a lacinia.
+                        </p>
+                </article>
+                <article class="feature">
+                    <svg class="feature__icon mb--small">
+                        <use href="./assets/sprite/fa-regular.svg#paw-claws"></use>
+                    </svg>
+                    <h5 class="heading heading--5 mb--medium">See the animals up close</h5>
+                    <p class="paragraph">
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a felis semper, laoreet dui
                         eleifend, malesuada lectus.
                         Praesent egestas nisi vel arcu condimentum lobortis. Sed sed posuere odio. Praesent volutpat
                         vestibulum neque a lacinia.
-                        Maecenas interdum libero imperdiet magna tempus placerat. Nam egestas ac tellus eget gravida.
-                        Donec sed sapien tristique, fermentum est a, tincidunt neque. Aenean quis mauris tincidunt,
-                        condimentum sem ac, feugiat felis.
                     </p>
-            </article>
-            <article class="feature">
-                <svg class="feature__icon">
-                    <use href="./assets/sprite/fa-regular.svg#paw-claws"></use>
-                </svg>
-                <h5 class="heading heading--5">See the animals up close</h5>
-                <p class="feature__text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a felis semper, laoreet dui
-                    eleifend, malesuada lectus.
-                    Praesent egestas nisi vel arcu condimentum lobortis. Sed sed posuere odio. Praesent volutpat
-                    vestibulum neque a lacinia.
-                    Maecenas interdum libero imperdiet magna tempus placerat. Nam egestas ac tellus eget gravida.
-                    Donec sed sapien tristique, fermentum est a, tincidunt neque. Aenean quis mauris tincidunt,
-                    condimentum sem ac, feugiat felis.
-                </p>
-            </article>
-            <article class="feature">
-                <svg class="feature__icon">
-                    <use href="./assets/sprite/fa-regular.svg#seedling"></use>
-                </svg>
-                <h5 class="heading heading--5">Eat how our ancestors did</h5>
-                <p class="feature__text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a felis semper, laoreet dui
-                    eleifend, malesuada lectus.
-                    Praesent egestas nisi vel arcu condimentum lobortis. Sed sed posuere odio. Praesent volutpat
-                    vestibulum neque a lacinia.
-                    Maecenas interdum libero imperdiet magna tempus placerat. Nam egestas ac tellus eget gravida.
-                    Donec sed sapien tristique, fermentum est a, tincidunt neque. Aenean quis mauris tincidunt,
-                    condimentum sem ac, feugiat felis.
-                </p>
-            </article>
-            <article class="feature">
-                <svg class="feature__icon">
-                    <use href="./assets/sprite/fa-regular.svg#water"></use>
-                </svg>
-                <h5 class="heading heading--5">Bathe in the worlds cleanest rivers and natural baths</h5>
-                <p class="feature__text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a felis semper, laoreet dui
-                    eleifend, malesuada lectus.
-                    Praesent egestas nisi vel arcu condimentum lobortis. Sed sed posuere odio. Praesent volutpat
-                    vestibulum neque a lacinia.
-                    Maecenas interdum libero imperdiet magna tempus placerat. Nam egestas ac tellus eget gravida.
-                    Donec sed sapien tristique, fermentum est a, tincidunt neque. Aenean quis mauris tincidunt,
-                    condimentum sem ac, feugiat felis.
-                </p>
-            </article>
+                </article>
+                <article class="feature">
+                    <svg class="feature__icon mb--small">
+                        <use href="./assets/sprite/fa-regular.svg#seedling"></use>
+                    </svg>
+                    <h5 class="heading heading--5 mb--medium">Eat how our ancestors did</h5>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a felis semper, laoreet dui
+                        eleifend, malesuada lectus.
+                        Praesent egestas nisi vel arcu condimentum lobortis. Sed sed posuere odio. Praesent volutpat
+                        vestibulum neque a lacinia.
+                    </p>
+                </article>
+                <article class="feature">
+                    <svg class="feature__icon mb--small">
+                        <use href="./assets/sprite/fa-regular.svg#water"></use>
+                    </svg>
+                    <h5 class="heading heading--5 mb--medium">Bathe in natural waters</h5>
+                    <p class="paragraph">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam a felis semper, laoreet dui
+                        eleifend, malesuada lectus.
+                        Praesent egestas nisi vel arcu condimentum lobortis. Sed sed posuere odio. Praesent volutpat
+                        vestibulum neque a lacinia.
+                    </p>
+                </article>
+            </div>
         </section>
         <!-- packages -->
         <section id="packages" class="packages">
-            <h3 class="heading heading--3">Popular packages</h3>
+            <h3 class="heading heading--3 heading--green text--center mb--large">Popular packages</h3>
+            <div class="packages__box">
             <article class="package">
-                <img src="./assets/img//forest-1.jpg" class="package__img">
-                <h5 class="heading heading--5"></h5>
-                <ul class="package__list">
+                <img src="./assets/img//forest-1.jpg" class="package__img mb--medium">
+                <h5 class="heading heading--5 mb--small">Beginner</h5>
+                <ul class="package__list mb--small">
+                    <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                    <li class="package__item">Lorem ipsum dolor sit amet.</li>
                     <li class="package__item">Lorem ipsum dolor sit amet.</li>
                     <li class="package__item">Lorem ipsum dolor sit amet.</li>
                     <li class="package__item">Lorem ipsum dolor sit amet.</li>
                 </ul>
             </article>
             <article class="package">
-                <img src="./assets/img//forest-2.jpg" class="package__img">
-                <h5 class="heading heading--5"></h5>
-                <ul class="package__list">
+                <img src="./assets/img//forest-2.jpg" class="package__img mb--medium">
+                <h5 class="heading heading--5 mb--small">Intermediate</h5>
+                <ul class="package__list mb--small">
+                    <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                    <li class="package__item">Lorem ipsum dolor sit amet.</li>
                     <li class="package__item">Lorem ipsum dolor sit amet.</li>
                     <li class="package__item">Lorem ipsum dolor sit amet.</li>
                     <li class="package__item">Lorem ipsum dolor sit amet.</li>
                 </ul>
             </article>
             <article class="package">
-                <img src="./assets/img//forest-3.jpg" class="package__img">
-                <h5 class="heading heading--5"></h5>
-                <ul class="package__list">
+                <img src="./assets/img//forest-3.jpg" class="package__img mb--medium">
+                <h5 class="heading heading--5 mb--small">Advanced</h5>
+                <ul class="package__list mb--small">
+                    <li class="package__item">Lorem ipsum dolor sit amet.</li>
+                    <li class="package__item">Lorem ipsum dolor sit amet.</li>
                     <li class="package__item">Lorem ipsum dolor sit amet.</li>
                     <li class="package__item">Lorem ipsum dolor sit amet.</li>
                     <li class="package__item">Lorem ipsum dolor sit amet.</li>
                 </ul>
             </article>
-        </section> -->
+            </div>
+        </section>
         <!-- stories -->
         <section id="stories" class="stories">
             <article class="story">
@@ -196,7 +194,7 @@
                 </svg>
                 <p class=story__author>Andrew Jacobsin</p>
             </article>
-        </section> -->
+        </section> 
         <!-- booking -->
         <section id="booking" class="booking">
             <form class="form">
@@ -205,7 +203,7 @@
                 <input class="form__input form__input--date" type="date" required>
                 <button class="form__submit">Book Now!</button>
             </form>
-        </section> --> -->
+        </section> 
     </main>
     <!-- footer -->
     <footer class="footer">
