feat: Put story section styles

--- a/src/index.html
+++ b/src/index.html
@@ -176,23 +176,24 @@
         </section>
         <!-- stories -->
         <section id="stories" class="stories">
+            <h3 class="heading heading--3 heading--white text-center mb--large">User Stories</h3>
             <article class="story">
+                <h5 class=story__title>A hiking trip to remember!</h5>
                 <p class="story__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lacinia, felis
                     sed tempus aliquet, augue ligula lobortis ex, quis vulputate tortor nisl ut magna.
                     Praesent molestie accumsan nisl, sit amet tincidunt eros tincidunt vel. Fusce nec mi sapien.</p>
                 <svg class="story__img">
                     <use href="./assets/sprite/fa-regular.svg#user-circle"></use>
                 </svg>
-                <p class=story__author>Kevin Fremgen</p>
             </article>
             <article class="story">
+                <h5 class=story__title>One of the best hiking trips I ever went on!</h5>
                 <p class="story__text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer lacinia, felis
                     sed tempus aliquet, augue ligula lobortis ex, quis vulputate tortor nisl ut magna.
                     Praesent molestie accumsan nisl, sit amet tincidunt eros tincidunt vel. Fusce nec mi sapien.</p>
                 <svg class="story__img">
                     <use href="./assets/sprite/fa-regular.svg#user-circle"></use>
                 </svg>
-                <p class=story__author>Andrew Jacobsin</p>
             </article>
         </section> 
         <!-- booking -->
