--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
     <!-- main -->
     <main class="main">
         <!-- about section -->
-        <section class="about" data-id="about">
+        <section id="about" class="about" data-id="about">
             <h3 class="heading heading--3 heading--green mb--large text--center">Tours for living on the wild side</h3>
             <div class="about__info">
                 <p class="paragraph">fringilla eu lacinia sit amet, aliquet quis sapien. Proin pellentesque, metus ut
@@ -83,7 +83,7 @@
             </div>
         </section>
         <!-- features -->
-        <section class="features" data-id="features">
+        <section id="features" class="features" data-id="features">
             <h3 class="heading heading--3 heading--white mb--large">Features</h3>
             <div class="features__box">
                 <article class="feature">
@@ -137,7 +137,7 @@
             </div>
         </section>
         <!-- packages -->
-        <section  class="packages" data-id="packages">
+        <section  id="packages" class="packages" data-id="packages">
             <h3 class="heading heading--3 heading--green text--center mb--large">Popular packages</h3>
             <div class="packages__box">
             <article class="package">
@@ -176,7 +176,7 @@
             </div>
         </section>
         <!-- stories -->
-        <section  class="stories" data-id="stories">
+        <section  id="stories" class="stories" data-id="stories">
             <h3 class="heading heading--3 heading--white text-center mb--large">User Stories</h3>
             <article class="story">
                 <h5 class=story__title>A hiking trip to remember!</h5>
@@ -198,7 +198,7 @@
             </article>
         </section> 
         <!-- booking -->
-        <section  class="booking" data-id="booking">
+        <section  id="booking" class="booking" data-id="booking">
             <form class="form">
                 <label class="form__label" for="input-email">Email:</label>
                 <input id="input-email" class="form__input form__input--email" placeholder="email" type="email" required>
