feat: Put form submission handler

--- a/src/index.html
+++ b/src/index.html
@@ -201,11 +201,11 @@
         <section  id="booking" class="booking" data-id="booking">
             <form class="form">
                 <label class="form__label" for="input-email">Email:</label>
-                <input id="input-email" class="form__input form__input--email" placeholder="email" type="email" required>
+                <input id="input-email" class="form__input form__input--email" name="email" placeholder="email" type="email" required>
                 <label class="form__label" for="input-name">Name:</label>
-                <input id="input-text" class="form__input form__input--text" placeholder="name" type="text" required>
+                <input id="input-text" class="form__input form__input--text" name="name" placeholder="name" type="text" required>
                 <label class="form__label" for="input-date">Date:</label>
-                <input id="input-date" class="form__input form__input--date" type="date" required>
+                <input id="input-date" class="form__input form__input--date" name="date" type="date" required>
                 <button class="button button--green button--form">Book Now!</button>
             </form>
         </section> 
