feat: Put header button handler

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
     <header id="header" class="header">
         <h1 class="heading heading--1 heading--main">Wild Tours</h1>
         <h3 class="heading heading--3 heading--sub mb--large">Live life on the wild side</h3>
-        <a class="button button--animation button--white button--link" href="#packages">Discover Our Tours</a>
+        <a class="button button--animation button--white button--link button--header" href="#packages">Discover Our Tours</a>
     </header>
     <!-- main -->
     <main class="main">
