feat: Put about  button handler

--- a/src/index.html
+++ b/src/index.html
@@ -69,7 +69,7 @@
                     elementum metus et auctor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere
                     cubilia curae; Aenean ac ligula neque. Cras ut aliquam risus.
                 </p>
-                <a class="button button--green button--link" href="#">
+                <a class="button button--green button--link button--about" href="#">
                     Learn More
                     <svg class="button__icon">
                         <use href="./assets/sprite/fa-regular.svg#arrow-right"></use>
