feat: Put back to top button

--- a/src/index.html
+++ b/src/index.html
@@ -210,6 +210,12 @@
             </form>
         </section> 
     </main>
+    <!-- back to top button -->
+    <a href="#header" class="button button--link button--white button--top hidden">
+        <svg class="button__icon">
+            <use href="./assets/sprite/fa-regular.svg#arrow-up"></use>
+        </svg>
+    </a>
     <!-- footer -->
     <footer class="footer">
         <p class="copyright__text">&copy <span class="copyright__date"> 2021</span> <span
