--- a/src/index.html
+++ b/src/index.html
@@ -11,7 +11,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@100;400;700&display=swap" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
-    <script src="js/index.js" type="module" defer ></script>
+    <script src="js/controller/index.js" type="module" defer ></script>
 </head>
 
 <!-- body -->
