feat: Put nav burger

--- a/src/index.html
+++ b/src/index.html
@@ -18,6 +18,11 @@
 <body class="body">
     <!-- nav -->
     <nav class="nav">
+        <button class="nav__button" >
+            <svg class="nav__icon">
+                <use href="./assets/sprite/fa-regular.svg#bars"></use>
+            </svg>
+        </button>
         <ul class="nav__list">
             <!-- <li class="nav__item">
                 <a class="nav__link" href="#about">About</a>
